--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,13 +15,11 @@
         "**/.pytest_cache/**": true,
         "**/dist/**": true,
     },
-    "python.testing.pytestEnabled": true,
     "python.formatting.provider": "black",
+    "python.testing.pytestEnabled": true,
     "python.testing.pytestArgs": [
-        ".",
+        "test_main.py",
         "-v",
-        "-s"
+        "-s",
     ],
-    "python.testing.unittestEnabled": false,
-    "python.testing.nosetestsEnabled": false,
 }
