--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-git+git://github.com/jtgrassie/pyrx@6e47349#egg=pyrx
 requests==2.21.0
+pyrandx==0.0.6
 pyspx==0.4.0
 pytest==5.3.4
+scrypt==0.8.13
 
